--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="wrapper">
     <div class="left">
-        <img src="C:\Users\hemanth yadav g\Desktop\CSS-User-Profile-Card-master\hemanth.jpg"
+        <img src="https://github.com/HemanthYadavG7/aaa/blob/main/hemanth.jpg"
         alt="user" width="100">
         <h4>Hemanth Yadav G</h4>
          <p>UI Developer</p>
